# ai_website

./: .gitignore  README.md  install_requirements.ps1  install_requirements.sh  main.py  pyproject.toml  ruff.toml
routes/: __init__.py  api.py  exceptions.py  index.py  lib.py  login.py  profile.py  routes.py  tools.py
routes/tools_util/: __init__.py  util.py
routes/tools_util/color_correction/: __init__.py  color_correction.py
routes/tools_util/gpt/: gpt.py
routes/tools_util/sketchmaker/: __init__.py  sketchmaker.py
routes/tools_util/stt/: stt.py
routes/tools_util/tts/: __init__.py  tts.py
routes/tools_util/upscaler/: __init__.py  upscaler.py
static/css/: imagebox.css  styles.css  styles_override.css
static/css/header/: index.css  logo.css  profile.css
static/css/index/: index.css
static/css/tools/: audio_tool.css  image_tool.css  index.css  text_tool.css  tool.css
static/css/tools/chatgpt/: index.css
static/css/tools/color-correction/: index.css
static/css/tools/tts/: index.css
static/css/tools/upscaler/: index.css
static/scripts/lib/: util.js
static/scripts/login/: index.js
static/scripts/tools/chatgpt/: index.js
static/scripts/tools/color-correction/: index.js
static/scripts/tools/stt/: index.js
templates/: index.html  login.html  profile.html  tools.html
templates/blocks/: footer.html  header.html
templates/tools/: chatgpt-3.5.html  chatgpt.html  color-correction.html  sketchmaker.html  stt.html  tts.html  upscaler.html
templates/widgets/: login.html  register.html
util/: __init__.py  config.py  db.py  exceptions.py  lib.py  user.py
(+3 files in other folders)
