[tool.poetry]
name = "ai website"
version = "0.1.0"
description = "Project for infomatrix.asia 2023 tournament"
authors = ["someuser"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
ruff = "^0.1.3"
captcha = "^0.5.0"
motor = "^3.3.1"
dotenv-python = "^0.0.1"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.0"
fastapi-login = "^1.9.1"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
