[tool.poetry]
name = "Am I Robot"
version = "0.1.0"
description = "Project for infomatrix.asia 2023 tournament"
authors = ["someuser"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
ruff = "^0.1.3"
captcha = "^0.5.0"
motor = "^3.3.1"
dotenv-python = "^0.0.1"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.0"
fastapi-login = "^1.9.1"
pytz = "^2023.3.post1"
deepdiff = "^6.6.1"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
email-validator = "^2.1.0.post1"
g4f = "^0.1.7.9"
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"
blendmodes = "^2023"
num2words = "^0.5.13"
pydub = "^0.25.1"
soundfile = "^0.12.1"
omegaconf = "^2.3.0"

[tool.isort]
profile = "black"
skip_glob = ["venv/*", "venv-dev/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
